[BugFix] Fix for bug for no raiting checkin and integration test to cover this case - add jsoup extension to use fluent approach null save